--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Business Jekyll Theme
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
   Test desc.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/pierces-paw-paradise"
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Company Information
