--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ address_line: 1700 Periwinkle Way, Unit 8, Sanibel, FL, 33957
 telephone_number: 239-445-6880
 # fax_number: Your Fax Number
 company_email: store@piercespawparadise.com
-google_map: https://maps.app.goo.gl/FPXdxzvSzNCW4UrF6
+#google_map: <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3572.4116158279535!2d-82.06179228847896!3d26.44245778004409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88db3140e3534e43%3A0x97b0d0be6fa0a144!2sPierce&#39;s%20Paw%20Paradise!5e0!3m2!1sen!2sus!4v1755531561086!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+google_map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3572.4116158279535!2d-82.06179228847896!3d26.44245778004409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88db3140e3534e43%3A0x97b0d0be6fa0a144!2sPierce&#39;s%20Paw%20Paradise!5e0!3m2!1sen!2sus!4v1755531561086!5m2!1sen!2sus
 
 # Social Link
 facebook_link: https://www.facebook.com/people/Pierces-Paw-Paradise/61558740831067/
